Lifesize, Inc. Careers - Senior Software Engineer (VoIP, Python). Job Application for Développeur(euse) front-end - Knowledge Scout | Front-End Software Developer - Knowledge Scout at Element AI.       Junior Software Developer - Effectory     .       Senior Software Developer - Effectory     .       Software Developer - Effectory     . Job Application for Software Engineer - Frontend at LiveRamp. Job Application for Senior Software Engineer, Full Stack (DM) at LiveRamp. Software Developer | GENESYS Consulting Services, Inc.. Job Application for Senior VoIP Software Engineer at Fuze. Job Application for Senior VoIP Software Engineer at Fuze. Job Application for Senior VoIP Software Engineer at Fuze. Job Application for Software Engineer- Backend Python- Remote  at Fuze. Job Application for Software Engineer- Backend Python- Remote  at Fuze. Job Application for Software Engineer- Backend Python at Fuze. Job Application for Software Engineer- Backend Python at Fuze. Job Application for Software Engineer- Backend Python at Fuze. Job Application for Software Engineer - Strategy Team at Truecaller. Splunk Careers - Senior Software Engineer in Test - Machine Learning. Jobvite, Inc. Careers - Senior Software Engineer. Lamudi - Senior Software Developer / PHP Developer. Lamudi - Mid Software Developer / PHP Developer. Job Application for Software Developer - Data Specialist at DRW . Job Application for Senior Software Engineer at InVision. Job Application for Fullstack Software Engineer at SevenRooms. Job Application for Sr. Software Engineer (React.js / Javascript) at Cast & Crew Entertainment Services, LLC. Job Application for Sr. Software Engineer (Node.js) at Cast & Crew Entertainment Services, LLC. Job Application for Sr. Software Engineer (.NET/C#) at Cast & Crew Entertainment Services, LLC. Job Application for Sr. Software Engineer (Java) at Cast & Crew Entertainment Services, LLC. Job Application for Sr. Software Engineer (Javascript) at Cast & Crew Entertainment Se

--- a/software.html
+++ b/software.html
@@ -39,6 +39,32 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/lifesize/job/oKFD7fwT'>Lifesize, Inc. Careers - Senior Software Engineer (VoIP, Python)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/elementai/jobs/1785999'>Job Application for D?veloppeur(euse) front-end - Knowledge Scout | Front-End Software Developer - Knowledge Scout at Element AI</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://effectory.recruitee.com/o/junior-software-developer'>
+      Junior Software Developer - Effectory
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://effectory.recruitee.com/o/senior-software-developer'>
+      Senior Software Developer - Effectory
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://effectory.recruitee.com/o/software-developer-amsterdam'>
+      Software Developer - Effectory
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/liveramp/jobs/1767629'>Job Application for Software Engineer - Frontend at LiveRamp</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
@@ -163,7 +189,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/ncu/job/ovyDafwA'>Northcentral University Careers - Jr. Software Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ncu/job/ovyDafwA'>Northcentral University Careers - Jr. Software Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -223,7 +249,7 @@
 <p><span class="badge badge-light">Durham, NC</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/spireon/job/oKwEafwO'>Spireon Careers - Sr. Software Engineer in Test</a></h5> 
+<h5><a href='https://jobs.jobvite.com/spireon/job/oKwEafwO'>Spireon Careers - Sr. Software Engineer in Test</a></h5> 
 <p><span class="badge badge-light">Irvine California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -243,7 +269,7 @@
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/axon/be7c46b8-5d9f-4f72-9852-164781424bff'>Axon - Senior Embedded Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/axon/be7c46b8-5d9f-4f72-9852-164781424bff'>Axon - Senior Embedded Software Engineer</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -259,7 +285,7 @@
 <p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/fanatics/d7bf0786-8218-4d2b-b41b-ef97b56214a0'>Fanatics - Software Engineer # 5244</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fanatics/d7bf0786-8218-4d2b-b41b-ef97b56214a0'>Fanatics - Software Engineer # 5244</a></h5> 
 <p><span class="badge badge-light">India, Hyderabad</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -267,7 +293,7 @@
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://h2oai.applytojob.com/apply/dzS6qTm22r/Senior-Software-Engineer-Multiple-States'>Senior Software Engineer (Multiple States) - h2o.ai - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://h2oai.applytojob.com/apply/dzS6qTm22r/Senior-Software-Engineer-Multiple-States'>Senior Software Engineer (Multiple States) - h2o.ai - Career Page</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -307,7 +333,7 @@
 <p><span class="badge badge-light">New Zealand</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/quotient/job/o1Ynafwg'>Quotient Technology Inc. Careers - Software Engineer-1</a></h5> 
+<h5><a href='http://jobs.jobvite.com/quotient/job/o1Ynafwg'>Quotient Technology Inc. Careers - Software Engineer-1</a></h5> 
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -324,7 +350,7 @@ talented software engineers in implementing, configuring, and customizing our?..
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/starry/jobs/4370392002'>Job Application for Software Engineer, Node.js at Starry</a></h5> 
+<h5><a href='https://boards.greenhouse.io/starry/jobs/4370392002'>Job Application for Software Engineer, Node.js at Starry</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -372,7 +398,7 @@ optimizing our data pipeline. The ideal candidate is an experienced data pipelin
 apps. Since our launch in May 2012, we've expanded into 19 major cities with 
 over?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/servicetitan/jobs/1792879'>Job Application for Software Engineer, Front End at ServiceTitan</a></h5> 
+<h5><a href='https://boards.greenhouse.io/servicetitan/jobs/1792879'>Job Application for Software Engineer, Front End at ServiceTitan</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... This is an exciting role for an engineer to come in and develop the major UI 
 features in a rapidly growing startup. We build for perfection, use the most 
@@ -383,7 +409,7 @@ modern?...</p>
 <p>5 days ago ... We're looking for software engineering professionals with deep strengths in 
 developing highly performant, highly available software written in modern C++.</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/cruise/jobs/1732761?gh_jid=1732761'>Job Application for Senior Software Engineer - Robotics Simulation ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cruise/jobs/1732761?gh_jid=1732761'>Job Application for Senior Software Engineer - Robotics Simulation ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Our Simulation team is responsible for building all of the tools we need to test 
 and validate our autonomous vehicles performance and behavior before they go
@@ -420,7 +446,7 @@ Angular) in Hamburg (published: 24.05.2019). Apply now or check the other?...</p
 Trading Systems (Java, JavaScript) in Z?rich (published: 03.04.2019). Apply now 
 or?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/j2-global/job/o8Jvafwg'>J2 Global Careers - Senior Software Engineer - Java</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/j2-global/job/o8Jvafwg'>J2 Global Careers - Senior Software Engineer - Java</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -440,27 +466,7 @@ or?...</p>
 <p><span class="badge badge-light">Mexico</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/GBM1/743999685088960-head-of-software-engineering-financial-services-platform-'>GBM Head of Software Engineering (Financial Services Platform) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Mexico</span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/incorta/8a8730aa-8ffd-42dd-9cae-38307ddcef79'>Incorta - Senior Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='http://bossanovarobotics.applytojob.com/apply/YoMJA08qsI/Software-Engineer-Robotics'>Software Engineer, Robotics - Bossanova Robotics - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='http://bossanovarobotics.applytojob.com/apply/azzXmf7pg1/Software-Engineer-Robot-Middleware'>Software Engineer, Robot Middleware - Bossanova Robotics - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='http://bossanovarobotics.applytojob.com/apply/QcaAEbKswH/Software-Engineer-Robot-Build-And-Release'>Software Engineer, Robot Build and Release - Bossanova Robotics - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
